Fix: alignement dernier item navbar

--- a/css/new.css
+++ b/css/new.css
@@ -166,6 +166,10 @@ requis du fait d'un conflit entre micromodal.js et spectre.css
     }
 }
 
+.navbar .navbar-section:not(:first-child):last-child{
+    justify-content: flex-start;
+}
+
 .stretch {
     max-width: 100%;
 }
@@ -280,4 +284,3 @@ div.logo-sponsors a img {
     max-height: 100px;
     margin: 1rem;
 }
-
